--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/PasswordChangeWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/PasswordChangeWindow.xaml
@@ -40,7 +40,7 @@
 
 
 
-        <Button  Content="Promeni" Command="{Binding ChangePasswordCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="168,382,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
+        <Button  Content="PROMENI" Command="{Binding ChangePasswordCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="168,382,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
 
     </Grid>
 </Window>
