--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/UcenikOdeljenjeWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/UcenikOdeljenjeWindow.xaml
@@ -42,7 +42,7 @@
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Dodaj" Command="{Binding DodajOdeljenjeCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="249,369,301,0" VerticalAlignment="Top" Height="40"/>
+        <Button Content="DODAJ" Command="{Binding DodajOdeljenjeCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="249,369,301,0" VerticalAlignment="Top" Height="40"/>
         <!--<Button Content="Obrisi" Command="{Binding DeleteOblastCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="344,356,206,0" VerticalAlignment="Top" Height="40"/>-->
 
 
