--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/OceniRadoveWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/OceniRadoveWindow.xaml
@@ -64,7 +64,7 @@
         </DataGrid>
         <!--<Button Visibility="{Binding IzmenaOblasti}" Content="Izmeni" Command="{Binding ChangeOblastCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="185,356,365,0" VerticalAlignment="Top" Height="40"/>-->
         <!--<Button Visibility="{Binding IzmenaOblasti}" Content="Obrisi" Command="{Binding DeleteOblastCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="344,356,206,0" VerticalAlignment="Top" Height="40"/>-->
-        <Button  Content="Oceni" Command="{Binding OceniCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="271,356,279,0" VerticalAlignment="Top" Height="40"/>
+        <Button  Content="OCENI" Command="{Binding OceniCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="271,356,279,0" VerticalAlignment="Top" Height="40"/>
 
 
     </Grid>
