--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/PrisustvaWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/PrisustvaWindow.xaml
@@ -51,7 +51,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Content="Evidentiraj" Command="{Binding EvidentirajPrisustvoCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="260,369,290,0" VerticalAlignment="Top" Height="40"/>
+        <Button Content="EVIDENTIRAJ" Command="{Binding EvidentirajPrisustvoCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="260,369,290,0" VerticalAlignment="Top" Height="40"/>
         <!--<Button Content="Obrisi" Command="{Binding DeleteOblastCommand}" FontSize="18" Background="Transparent" Foreground="Gold" Margin="344,356,206,0" VerticalAlignment="Top" Height="40"/>-->
 
 
