--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/RasporedCasovaWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/RasporedCasovaWindow.xaml
@@ -82,6 +82,6 @@
         <DatePicker SelectedDate="{Binding SelectedDatum}"  Margin="113,119,127,476"></DatePicker>
 
         <Label Content="{Binding RasporedError, UpdateSourceTrigger=PropertyChanged}" Name="prezimeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="104" Margin="113,244,0,0" VerticalAlignment="Top" Width="554" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
-        <Button Content="Proveri" HorizontalAlignment="Left" Command="{Binding CheckRasporedCommand}" Visibility="{Binding IsAdmin}" Height="77" Margin="294,162,0,0" VerticalAlignment="Top" Width="194" Foreground="#FFFBFB9F" Background="Transparent"  FontFamily="Segoe UI" BorderBrush="White" FontSize="22" />
+        <Button Content="PROVERI" HorizontalAlignment="Left" Command="{Binding CheckRasporedCommand}" Visibility="{Binding IsAdmin}" Height="77" Margin="294,162,0,0" VerticalAlignment="Top" Width="194" Foreground="#FFFBFB9F" Background="Transparent"  FontFamily="Segoe UI" BorderBrush="White" FontSize="22" />
     </Grid>
 </Window>
